[package]
name = "dump-file-origin"
version = "0.4.2"
authors = ["k@warpnine.io"]
edition = "2021"
description = "A small CLI utility for extracting a file's origin metadata on macOS."

[dependencies]
plist = "1.5.0"
xattr = "1.0.1"
walkdir = "2.3.3"
clap = { version = "4.3.19", features = ["derive"] }
dirs = "5.0.1"
